package edu.fiuba.algo3.modelo;

public interface ScoringStrategy {

    public void apply(Score score);
}
